# zwo-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.github/workflows/: check.yml  test.yml
ci/: install-zwo-sdk.sh
libzwo-sys/: Cargo.toml  build.rs  wrapper.h
libzwo-sys/src/: lib.rs
src/: camera.rs  efw.rs  error.rs  ffi_util.rs  lib.rs
